syntax = "proto3";

package permissions;

option go_package = "github.com/killerquinn/permgen; permgen";

service Permissions{
    rpc DeleteUser (DeleteRequest) returns (DeleteResponse);
    rpc UpdateUser (UpdateRequest) returns (UpdateResponse);
    rpc VideoPerm (DownloadRequest) returns (DownloadResponse);
    rpc ChangeOptions (ChangeOptionsRequest) returns (ChangeOptionsResponse);
}

message DeleteRequest{
    uint64 app_id = 1;
    int64 user_id = 2;
}

message DeleteResponse{
    bool permission = 1;
}

message UpdateRequest{
    uint64 app_id = 1;
    int64 user_id = 2; //required
}

message UpdateResponse{
    bool permission = 1;
}
message DownloadRequest{
    uint64 app_id = 1;
    int64 user_id = 2;
}
message DownloadResponse{
    bool permission = 1;
}
message ChangeOptionsRequest{
    uint64 app_id = 1;
    int64 user_id = 2;
}

message ChangeOptionsResponse{
    bool permission = 1;
}
